[package]
name = "stripe-gateway-rust"
version = "1.0.0"
edition = "2021"

[dependencies]
aws_lambda_events = "0.15.0"
lambda_runtime = "0.13.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
reqwest = { version = "0.12.7", features = ["json"] }
aws-sdk-secretsmanager = "1.48.0"
aws-config = "1.5.7"
log = "0.4.22"
env_logger = "0.11.5"
thiserror = "1.0.63"
urlencoding = "2.1.3"
serde_urlencoded = "0.7.1"
async-trait = "0.1.88"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "bootstrap"
path = "src/main.rs"